--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,37 @@ h1{
     margin: 0;
     padding-top: 25px;
 }
+
+form{
+
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+}
+
+input{
+    margin: 10px auto;
+    display: block;
+    padding: 7px 0;
+    width: 100%;
+}
+
+label{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 5px;
+}
+
+button{
+    width: 50%;
+    background-color: coral;
+    margin: 0 auto;
+    padding: 8px 0;
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+    color: white;
+    box-shadow: 2px 2px 8px black;
+    border-radius: 15px;
+}
